<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Crypt-Me</string>
    <string name="cancel">Cancel</string>
    <string name="encrypting">Encrypting</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="decrypting">Decrypting</string>
    <string name="done">Done</string>
    <string name="operation_in_progress">Operation in progress</string>
    <string name="home">Home</string>
    <string name="show_password">Show password</string>

    <string name="action_settings">Settings</string>
    <string name="no_input_file_selected">No input file selected</string>
    <string name="error_could_not_get_input_file">Error: Could not get input file</string>
    <string name="error_could_not_close_input_file">Error: Could not close input file</string>
    <string name="error_platform_does_not_support_the_required_cryptographic_methods">Error: Platform does not support the required cryptographic methods</string>
    <string name="error_utf16_encoding_is_not_supported">Error: UTF-16 encoding is not supported</string>
    <string name="error_could_not_close_output_file">Error: Could not close output file</string>
    <string name="no_output_file_selected">No output file selected</string>
    <string name="select_output_file">Select Output File</string>
    <string name="select_input_file">Select Input File</string>
    <string name="input_file">Input File</string>
    <string name="output_file">Output File</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="the_input_and_output_files_must_be_different">The input and output files must be different</string>
    <string name="contact_info">For help or suggestions email <b>contact@dewdrop623.com</b></string>
    <string name="version">v1.2</string>
    <string name="action_about">About</string>
    <string name="icon_made_by">Icon made by</string>
    <string name="from">from</string>
    <string name="flaticon_link"><u>https://www.flaticon.com/</u></string>
    <string name="lock_unlock_icon_creator_name">SimpleIcon</string>
    <string name="lock_unlock_icon_creator_link">https://www.flaticon.com/authors/simpleicon</string>
    <string name="flaticon_displayed_link"><u>www.flaticon.com</u></string>
    <string name="cc30_license_name"><u>CC 3.0 BY</u></string>
    <string name="licensed_by">licensed by</string>
    <string name="cc30_link">https://creativecommons.org/licenses/by/3.0/</string>
    <string name="icons">Icons</string>
    <string name="error_null_password">Error: null password</string>
    <string name="version_1_radio_button_text">Version 1</string>
    <string name="version_2_radio_button_text">Version 2</string>
    <string name="aescrypt_version">AESCrypt Version</string>
    <string name="another_operation_is_already_in_progress">Another operation is already in progress</string>
    <string name="encryption_completed">Encryption completed</string>
    <string name="decryption_completed">Decryption completed</string>
    <string name="encryption_canceled">Encryption canceled</string>
    <string name="decryption_canceled">Decryption canceled</string>
    <string name="file_search_icon_creator_name">Freepik</string>
    <string name="file_search_icon_creator_link">http://www.freepik.com</string>
    <string name="launcher_icon_creator_link">http://graphicloads.com/</string>
    <string name="launcher_icon_creator_name">GraphicLoads</string>
    <string name="freeware_license_name">Freeware</string>
    <string name="freeware_license_link">http://www.iconarchive.com/show/flat-finance-icons-by-graphicloads/lock-icon.html</string>
    <string name="iconarchive_name">Icon Archive</string>
    <string name="iconarchive_link">http://www.iconarchive.com/</string>
    <string name="ok">Ok</string>
    <string name="refresh">Refresh</string>
    <string name="file_picker_display">File Picker Display</string>
    <string name="list">List</string>
    <string name="home_icon_creator_name">Lyolya</string>
    <string name="home_icon_creator_link">https://www.flaticon.com/authors/lyolya</string>
    <string name="refresh_icon_creator_link">https://www.flaticon.com/authors/gregor-cresnar</string>
    <string name="refresh_icon_creator_name">Gregor Cresnar</string>
    <string name="folder_icon_creator_link">https://www.flaticon.com/authors/madebyoliver</string>
    <string name="folder_icon_creator_name">Madebyoliver</string>
    <string name="file_icon_creator_link">https://www.flaticon.com/authors/madebyoliver</string>
    <string name="file_icon_creator_name">freepik</string>
    <string name="trust_icon_creator_link">https://www.flaticon.com/authors/freepik</string>
    <string name="trust_icon_creator_name">Madebyoliver</string>
    <string name="choose_input_file">Choose input file</string>
    <string name="choose_output_file">Choose output file</string>
    <string name="file_is_a_directory">File is a directory</string>
    <string name="filename_cannot_be_empty">Filename cannot be empty</string>
    <string name="filename">Filename</string>
    <string name="sdcard_location">SD Card Location</string>
    <string name="edit">Edit</string>
    <string name="not_set">Not set</string>
    <string name="set">set</string>
    <string name="sdcard_icon_creator_link">https://www.flaticon.com/authors/smartline</string>
    <string name="sdcard_icon_creator_name">Smartline</string>
    <string name="sdcard">SD Card</string>
    <string name="how_to_locate_sdcard">To grant SD card access to AndroidCrypt, select the root directory of your SD Card on the following screen. This can be changed at any time in settings.</string>
    <string name="did_not_get_sdcard_access">Did not get SD card access</string>
    <string name="file_write_access_denied">File write access denied</string>
    <string name="file_not_found">File not found</string>
    <string name="write_permission_denied_if_sdcard_grant_permission_in_settings">Write permission denied. If outputting to SD card you need to grant permission to it in settings.</string>
    <string name="delete_input_file">Delete Input File</string>
    <string name="spanish_translation_credit">Spanish Translation: Thanks to Rony Javier</string>
    <string name="sdcard_error">SD Card Error</string>
    <string name="could_not_read_sdcard">Could not read SD card.</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="delete_input_file_after_uploading">Delete input file post encryption</string>
    <string name="delete_output_file_after_uploading">Delete input file post decryption</string>
    <string name="upload_a_file">Upload a file</string>
    <string name="enter_password">Enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypt">Encrypt</string>
    <string name="ask_everytime">Ask Every time</string>
    <string name="same_as_input">Same as Input</string>
    <string name="explorer">Explorer</string>
    <string name="encrypted_files">Encrypted Files</string>
    <string name="view_all">View all</string>
    <string name="recent_files">Recent Files</string>
    <string name="decrypted_files">Decrypted Files</string>
    <string name="search_for_files">Search for files..</string>
    <string name="about_crypt_text">Crypt-Me is an app that helps you secure your files with military-grade encryption algorithms. The encrypted files cannot be decrypted with any other tool or without your password or fingerprint.
    \n\nThis app is developed by Hexoncode. We are a team of highly skilled developers and designers who develop smooth and beautiful apps, websites, designs, graphics and many more cool things.</string>
    <string name="donate_text">We are a team of self-established, highly motivated developers and designers who put love in work. Your donations will help us make more awesome things like this app.</string>
    <!--    onboarding-->
    <string name="onboarding_welcome">Your data is your private property, so are your files. Without encryption, any malicious application can access your files and steal your data.</string>
    <string name="onboarding_encrypt">With a 256-bit military-grade encryption algorithm, 3 way key salting and multi-level remuneration, we ensure the files we encrypt can never be touched or fiddled with, without your consent.</string>
    <string name="onboarding_decrypt">Files encrypted by Crypt-Me can only be decrypted by its own unique algorithm accompanied by your provided password or fingerprint. Just Crypt-Me, That\'s it!</string>
    <string name="onboarding_trust">We respect your privacy and that is why your files don\'t leave your device. Encryption and decryption are done locally and without the internet. To ensure only genuine and non-tampered copies of the app are functional, we perform a purchase and integrity check on the first launch which requires internet access.</string>
    <string name="question_one">Q. Why does the app need internet permission?</string>
    <string name="question_two">Q. Do I need to have internet to use this app?</string>
    <string name="question_three">Q. Does this app store my files on a cloud?</string>
    <string name="question_four">Q. Is this app really made in India?</string>
    <string name="question_five">Q. How will the application help me? </string>
    <string name="answer_one">A. Privacy is our utmost concern and that is the reason we created this application.
To ensure only a genuine and non-tampered copy of the application is installed in your device, we perform a purchase and integrity check during the first launch.
This requires internet access after which, the entire application functions offline.</string>
    <string name="answer_two">A. No, absolutely not. Internet is required only during the first launch to validate the application\'s integrity as already mentioned above. The app completely functions offline.</string>
    <string name="answer_three">A. No! We do not send any of your files to the cloud. Your files stay on your phone and nothing goes out of it. The app is completely safe to use without any hesitation.</string>
    <string name="answer_four">A. Yes, the app is completely developed in India by an Indian startup \'Hexoncode\'. Read more about us in the About section of the app.</string>
    <string name="answer_five">A. The application can be used to encrypt sensitive content while sharing them over insecure networks, uploading to public clouds, or even to prevent someone from accessing the information.
The application supports all file formats and can be used in all situations to add a safety layer to your files.</string>

</resources>
